--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "mongoose": "^5.6.4",
     "postinstall": "^0.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
