--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "@google-cloud/translate": "^4.1.1",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.4",
