--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.16.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "postinstall": "^0.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
