messenger components added, message capture and state update working (with placeholders)

--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "postinstall": "^0.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "express-ws": "^4.0.0",
+    "moment": "^2.24.0",
+    "ws": "^7.1.0",
+    "dotenv": "^8.0.0"
   },
   "browserslist": {
     "production": [
