--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   },
   "dependencies": {
     "@google-cloud/translate": "^4.1.1",
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.4",
     "postinstall": "^0.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "express-ws": "^4.0.0",
-    "moment": "^2.24.0",
-    "ws": "^7.1.0",
-    "dotenv": "^8.0.0"
+    "socket.io": "^2.2.0"
   },
   "browserslist": {
     "production": [
