--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "ejs": "^2.6.2",
     "@google-cloud/translate": "^4.1.1",
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
+    "http": "0.0.0",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
     "mongoose": "^5.6.4",
