--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "@google-cloud/translate": "^4.1.1",
+    "@material-ui/core": "^4.3.0",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
-    "ejs": "^2.6.2",
-    "@google-cloud/translate": "^4.1.1",
-    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
+    "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
