--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "axios": "^0.19.0",
+    "font-awesome": "^4.7.0",
     "react": "^16.8.6",
+    "react-block-reveal-animation": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-parallax": "^2.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
