--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "good-mernin",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "axios": "^0.19.0",
