--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "good-mernin",
   "version": "0.1.0",
   "description": "Group 3 project",
+  "engines":{
+    "node": "11.14.0"
+  },
   "private": true,
   "proxy": "http://localhost:3001/",
   "main": "server.js",
