--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "proxy": "http://localhost:3001/",
   "main": "server.js",
   "scripts": {
-    "preinstall": "gen-creds.sh",
+    "preinstall": "sh gen-creds.sh",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
